ingress/ingress.yml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      certmanager.k8s.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"certmanager.k8s.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"nginx"},"name":"echo-ingress","namespace":"default"},"spec":{"rules":[{"host":"echo1.kube.overscroll.com","http":{"paths":[{"backend":{"serviceName":"echo1","servicePort":80}}]}},{"host":"echo2.kube.overscroll.com","http":{"paths":[{"backend":{"serviceName":"echo2","servicePort":80}}]}},{"host":"pg.kube.overscroll.com","http" [...]
      kubernetes.io/ingress.class: nginx
    creationTimestamp: "2019-02-20T15:17:58Z"
    generation: 5
    name: echo-ingress
    namespace: default
    resourceVersion: "8775590"
    selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/echo-ingress
    uid: b4451738-3522-11e9-a70c-9afc3e688632
  spec:
    rules:
    - host: echo1.kube.overscroll.com
      http:
        paths:
        - backend:
            serviceName: echo1
            servicePort: 80
    - host: echo2.kube.overscroll.com
      http:
        paths:
        - backend:
            serviceName: echo2
            servicePort: 80
    - host: strapi.kube.overscroll.com
      http:
        paths:
        - backend:
            serviceName: strapi
            servicePort: 80
    tls:
    - hosts:
      - echo1.kube.overscroll.com
      - echo2.kube.overscroll.com
      - strapi.kube.overscroll.com
      secretName: letsencrypt-prod
  status:
    loadBalancer:
      ingress:
      - ip: 67.207.73.242
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
